# parzivAI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_German.md  environment-dev.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  doc.yml
data/: Input_output_data_ParzivAI.csv
docs/source/: conf.py  index.rst  parzivai.rst
example_notebooks/: demo.ipynb
parzivai/: __init__.py  app.py  chat_models.py  image_search.py  input_output.py  insults.json  main.py  minimal_example.py  sensitive_topics.json  simple_inquiries.json  text_tagging.py
parzivai/data/: config.json  emergency.txt  insults.json  sensitive_topics.json  simple_inquiries.json  urls.json
parzivai/tests/: conftest.py  test_app.py  test_chat_models.py  test_image_search.py  test_input_output.py  test_text_tagging.py
source/: intro_German.md
