[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "parzivai"
version = "0.1.0"
description = "AI-based assistant for medieval history and Middle High German language"
readme = "README.md"
maintainers = [
    {name = "ParzivAI dev team", email = "ssc@iwr.uni-heidelberg.de" }
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "streamlit",
    "streamlit-feedback",
    "pandas",
    "spacy",
    "spacy-streamlit",
    "faiss-cpu",
    "langchain-community",
    "langchain-huggingface",
    "langchain-ollama",
    "pydantic",
    "playwright",
    "pytest",
    "tiktoken"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --tb=short"
testpaths = ["tests"]
